@@ -1,3 +1,14 @@
+2014-12-12  Beth Dakin  <bdakin@apple.com>
+
+        Need a fake mouse move after hiding data detectors UI
+        https://bugs.webkit.org/show_bug.cgi?id=139608
+        -and corresponding-
+        rdar://problem/19221935
+
+        Reviewed by Tim Horton.
+
+        * WebCore.exp.in:
+
 2014-12-12  Dean Jackson  <dino@apple.com>
 
         [Media iOS] Inline video controls have an outlined scrubber
